# migraphx_study

./: .gitignore  build_dep.sh  build_morphizen.sh  build_scrip.sh
kernel_dev/hello_world/: compile.sh  hello_world.cpp
migraphx_infer/: CMakeLists.txt  compile.sh  log_to_table.py  migraphx_debug.sh  no_igpu.sh  perf_recorder.py  test_onnx_runner.cpp  test_onnx_runner_migraphx_ep.cpp  test_onnx_runner_new_abi.cpp
presentation/: compile.md  e2e.md  general_layout.md  get_capability.md
